# xemr

./: AUTHORS  ChangeLog  Makefile  Makefile.am  README  TODO  bootstrap.sh  cleanup  configure.ac  make.conf  xemr.lsm
doc/: Makefile  fig1.eps  fig1.odg  fig10.eps  fig11.eps  fig12.eps  fig13.eps  fig14.eps  fig15.eps  fig16.eps  fig17.eps  fig18.eps  fig19.eps  fig2.eps  fig2.odg  fig20.eps  fig21.eps  fig22.eps  fig23.eps  fig3.eps  fig3.odg  fig4.eps  fig4.odg  fig5.eps  fig5.odg  fig6.eps  fig6.odg  fig7.eps  fig7.odg  fig8.eps  fig9.eps  manual.bib  manual.tex
examples/: README
examples/al/: README  al-1st-order.sps  al.sps  alum3.spe  alum3.spy
examples/asymmlw/: README  hydroq200.spe  hydroq200.spy  hydroq205.spe  hydroq205.spy  hydroq210.spe  hydroq210.spy  hydroq215.spe  hydroq215.spy  hydroq220.spe  hydroq220.spy  hydroq225.spe  hydroq225.spy  hydroq230.agr  hydroq230.spe  hydroq230.sps  hydroq230.spy  hydroq235.spe  hydroq235.spy  hydroq240.spe  hydroq240.sps  hydroq240.spy  hydroq245.spe  hydroq245.spy  hydroq250.spe  hydroq250.sps  hydroq250.spy  hydroq255.spe  hydroq255.spy  hydroq260.spe  hydroq260.spy  hydroq265.spe  hydroq265.spy  hydroq270.spe  hydroq270.spy  hydroq275.spe  hydroq275.spy  hydroq280.spe  hydroq280.spy  hydroq285.spe  (+5 more)
examples/b2/: README  b2-1500.agr  b2-1500.sps  b2-2130.agr  b2-2130.sps  b2-2700.agr  b2-2700.sps
examples/boron/: README  ar-0vac.sps  ar-1vac.sps  ar-2vac.sps  bakr1.par  bakr1.spc  bakr1.spe  bakr1.spy  bakr10.par  bakr10.spc  bakr10.spe  bakr10.spy  bakr11.par  bakr11.spc  bakr11.spe  bakr11.spy  bakr2.par  bakr2.spc  bakr2.spe  bakr2.spy  bakr3.par  bakr3.spc  bakr3.spe  bakr3.spy  bakr4.par  bakr4.spc  bakr4.spe  bakr4.spy  bakr5.par  bakr5.spc  bakr5.spe  bakr5.spy  bakr6.par  bakr6.spc  bakr6.spe  bakr6.spy  bakr7.par  bakr7.spc  bakr7.spe  bakr7.spy  (+49 more)
examples/cu/: README  cu-exp.spe  cu-exp.spy  cu-sim.sps  cu.agr  cu.sps
examples/endor/: README  naphthoquinone-endor.agr  naphthoquinone-endor.sps  simple-endor.agr  simple-epr.agr  simple.sps
examples/endor-analysis/: K004.237.spe  K004.237.sps  K004.237.spy  K013.217.sps  K013.217.spy  README
examples/epr-analysis/: README  README~  example.agr  example2.agr  hydroqsuu250.spe
examples/heinzer/: README  four-sites.sps  heinzer1.agr  heinzer1.sps  hq-attempt.sps  three-sites.sps  two-sites.sps
examples/high-spin/: README  example1.agr  example1.sps  example2.agr  example2.sps  example3.agr  example3.sps  test.sps
examples/hippur/: MAIL  README  test.sps  test2.sps  test3.sps  test4.sps
examples/hydrogen/: README  h-atom.agr  h-atom.sps  scale1.agr  scale1.dat~  test.sps
examples/hydrogen-triplet/: README  knight.agr  knight.sps  knight2.agr  knight2.spe  knight2.sps  knight2.spy
examples/hydroquinone/: README  arrhenius.agr  extract-error.csh  extract-oh.csh  extract-rate.csh  hydroqsuu270.spe  hydroqsuu270.sps  hydroqsuu270.spy  hydroqsuu275.spe  hydroqsuu275.sps  hydroqsuu275.spy  hydroqsuu280.spe  hydroqsuu280.sps  hydroqsuu280.spy  hydroqsuu285.spe  hydroqsuu285.sps  hydroqsuu285.spy  hyperfine.agr  (+9 more)
libepr/: Makefile  Makefile.am  base.c  calc.c  conv.c  data.c  database.c  epr.h  fft.c  file.c  fit.c  hamilton.c  imag.c  line.c  misc.c  optim.c  peak.c  powder.c  simul.c  smooth.c  tensor.c
libepr/minpack/: Makefile
scripts/: cnvall
sh/: L2a.out  L2b.out  LS.out  LS.txt  Makefile  README  cf.txt  main.c  methyl.sps  no-cf.txt  test.out
ui/: Makefile  Makefile.am  Makefile.am~  alinewidth.c  alinewidth.fd  alinewidth.h  calibsig.c  calibsig.fd  calibsig.h  cmhz.c  cmhz.fd  cmhz.h  convert.c  convert.fd  convert.h  convol.c  convol.fd  convol.h  differences.c  differences.fd  differences.h  diffout.c  diffout.fd  diffout.h  elel.c  elel.fd  elel.h  elw.c  elw.fd  elw.h  equivalence.c  equivalence.fd  equivalence.h  generic.c  generic.fd  generic.h  gui.c  gui.fd  gui.h  gvalue.c  (+74 more)
util/: Makefile  Makefile.am  README  aspect2epr.c  epr2esp.c  esp2epr.c  esp2epr.h  glue.c  pc2epr.c  xy2epr.c  y2epr.c
xemr/: Makefile  Makefile.am  create.c  dialog.c  file.c  genutil.c  main.c  measure.c  setup.c  varutil.c  xemr.h  xemr.xpm
xemr/calibration/: README  bruker-endor.set  varian-epr.set
xemr/templates/: eie.spe  endor.spe  epr.spe  epr.spy  triple-gen.spe  triple-gen.spy  triple-spec.spe
(+85 files in other folders)
