noinst_LIBRARIES = libepr.a
libepr_a_SOURCES = file.c misc.c calc.c database.c fft.c peak.c conv.c base.c smooth.c line.c optim.c fit.c simul.c tensor.c hamilton.c powder.c imag.c data.c minpack/dpmpar.f minpack/enorm.f minpack/fdjac2.f minpack/lmdif.f minpack/lmpar.f minpack/qrfac.f minpack/qrsolv.f

