noinst_LIBRARIES = libui.a
libui_a_SOURCES = gui.c param.c mark.c polyn.c symmetry.c calibsig.c convol.c differences.c diffout.c position.c peakout.c convert.c linewidth.c equivalence.c simpar.c heinzer.c variables.c runsimul.c runmon.c runsim.c misc.c shift.c summary.c generic.c hyperfine.c elel.c quadrupole.c alinewidth.c selectlw.c gvalue.c elw.c runml.c spec_setup.c window.c orbital.c cmhz.c hj.c gui.h param.h mark.h polyn.h symmetry.h calibsig.h convol.h differences.h diffout.h position.h peakout.h convert.h linewidth.h equivalence.h simpar.h heinzer.h variables.h runsimul.h runmon.h runsim.h misc.h shift.h summary.h generic.h hyperfine.h elel.h quadrupole.h alinewidth.h selectlw.h gvalue.h elw.h runml.h spec_setup.h window.h orbital.h cmhz.h hj.h
